--- a/index.html
+++ b/index.html
@@ -10,20 +10,30 @@
             margin: 20px;
             padding: 20px;
         }
+        .employee-card {
+            padding: 10px;
+            margin: 10px;
+            background-color: lightgray;
+            border-radius: 5px;
+            display: inline-block;
+        }
+        #employeeContainer {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
+    <header><h1>Coding Challenge #13</h1></header>
 
-    <h1>Employee Management System Dashboard</h1>
-
-    <!-- Dashboard Metrics Section -->
-    <h2>Dashboard Metrics</h2>
-    <div id="dashboard"></div>
+    <main>
+    <h2>Employee Management System Dashboard</h2>
+        <div id="employeeContainer"></div>
 
 
 
     <!-- Link to JavaScript File -->
     <script src="cc_13.js"></script>
-
+</main>
+<footer>Site designed by Riley Hedges</footer>
 </body>
 </html>
