Added extra comments

--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Employee Management System Dashboard</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 20px;
-        }
-        .employee-card {
-            padding: 10px;
-            margin: 10px;
-            background-color: lightgray;
-            border-radius: 5px;
-            display: inline-block;
-        }
-        #employeeContainer {
-            margin-bottom: 20px;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        padding: 20px;
+      }
+      .employee-card {
+        padding: 10px;
+        margin: 10px;
+        background-color: lightgray;
+        border-radius: 5px;
+        display: inline-block;
+      }
+      #employeeContainer {
+        margin-bottom: 20px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header><h1>Coding Challenge #13</h1></header>
 
     <main>
-    <h2>Employee Management System Dashboard</h2>
-        <div id="employeeContainer"></div>
+      <h2>Employee Management System Dashboard</h2>
+      <div id="employeeContainer"></div>
 
-
-
-    <!-- Link to JavaScript File -->
-    <script src="cc_13.js"></script>
-</main>
-<footer>Site designed by Riley Hedges</footer>
-</body>
+      <!-- Link to JavaScript File -->
+      <script src="cc_13.js"></script>
+    </main>
+    <footer>Site designed by Riley Hedges</footer>
+  </body>
 </html>
